# Bloop-UI

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Trunk.toml  build.ps1  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel-build.sh  vercel.json  vite.config.ts
.cargo/: config.toml
src/: App.tsx  app.rs  index.css  lib.rs  main.tsx
src/components/: AppLayout.tsx  AssistantPanel.tsx  BeginnerGuide.tsx  CodeIntelligencePanel.tsx  CommandPalette.tsx  ContextMenu.tsx  DiffViewer.tsx  EditorArea.tsx  ErrorBoundary.tsx  FileExplorer.tsx  GitView.tsx  IntegrationSettings.tsx  LeftSidebar.tsx  Logo.tsx  MenuBar.tsx  MoltbookPanel.tsx  OpenClawPanel.tsx  ResizeHandle.tsx  RightSidebar.tsx  SecurityDashboard.tsx  StatusBar.tsx  TerminalPanel.tsx  Toast.tsx  Tooltip.tsx  assistant_panel.rs  beginner_guide.rs  command_palette.rs  editor_area.rs  left_sidebar.rs  menu_bar.rs  mod.rs  resize_handle.rs  status_bar.rs  terminal_panel.rs  toast.rs
src/config/: editorConfig.ts  securityConfig.ts
src/hooks/: mod.rs  useKeyboardShortcut.ts  useLocalStorage.ts  useThrottle.ts
src/services/: api.ts  moltbook.ts  openclaw.ts
src/types/: index.ts  mod.rs  moltbook.ts  openclaw.ts
src/utils/: codeAnalyzer.ts  code_analyzer.rs  fileSystem.ts  file_system.rs  gitUtils.ts  git_utils.rs  mod.rs  security.rs  security.ts
